@@ -1,6 +1,6 @@
 Package: mi
-Version: 0.08-08
-Date: 2010-4-3
+Version: 0.08-08.01
+Date: 2010-4-5
 Title: Missing Data Imputation and Model Checking
 Author:
   Andrew Gelman <gelman@stat.columbia.edu>,
